--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-copy": "~0.7.0",
     "grunt-contrib-uglify": "~0.6.0",
     "grunt-remove": "^0.1.0",
-    "js-obfuscator": "~0.0.3"
+    "js-obfuscator": "~0.0.3",
+    "load-grunt-config": "~0.16.0"
   }
 }
