--- a/grunt/aliases.yaml
+++ b/grunt/aliases.yaml
@@ -6,8 +6,9 @@ default:
     - 'copy:main3'
     - 'copy:main4'
     - 'copy:main5'
-    - 'uglify'
-    - 'jsObfuscate'
+#    - 'uglify'
+#    - 'jsObfuscate'
+    - 'jscrambler'
     - 'compress'
     - 'copy:main1'
     - 'remove:main1'
@@ -15,3 +16,14 @@ clear-all:
   description: 'Clear all'
   tasks:
     - 'remove:main2'
+dev:
+  description: 'Default (production) build'
+  tasks:
+    - 'copy:main'
+    - 'copy:main2'
+    - 'copy:main3'
+    - 'copy:main4'
+    - 'copy:main5'
+    - 'compress'
+    - 'copy:main1'
+    - 'remove:main1'    
