--- a/grunt/aliases.yaml
+++ b/grunt/aliases.yaml
@@ -6,6 +6,7 @@ default:
     - 'copy:main3'
     - 'copy:main4'
     - 'copy:main5'
+    - 'copy:main6'
 #    - 'uglify'
 #    - 'jsObfuscate'
     - 'jscrambler'
@@ -24,6 +25,7 @@ dev:
     - 'copy:main3'
     - 'copy:main4'
     - 'copy:main5'
+    - 'copy:main6'
     - 'compress'
     - 'copy:main1'
-    - 'remove:main1'    
+    - 'remove:main1'
