--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "faq",
   "version": "0.0.1",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-compress": "~0.12.0",
-    "grunt-contrib-copy": "~0.7.0",
-    "grunt-contrib-uglify": "~0.6.0",
-    "grunt-jscrambler": "^0.2.9",
-    "grunt-remove": "^0.1.0",
-    "load-grunt-config": "~0.16.0",
-    "js-obfuscator": "~0.1.0"
+    "grunt": ">=0.4.5",
+    "grunt-contrib-compress": ">=0.12.0",
+    "grunt-contrib-copy": ">=0.7.0",
+    "grunt-contrib-uglify": ">=0.6.0",
+    "grunt-jscrambler": ">=0.2.9",
+    "grunt-remove": ">=0.1.0",
+    "grunt-text-replace": ">=0.4.0",
+    "load-grunt-config": ">=0.16.0",
+    "js-obfuscator": ">=0.1.0",
+    "grunt-rename": ">=0.1.4"
   }
 }
